
2012-05-16 Carsten Haitzler (The Rasterman)

	* Fix genlist ELM_LIST_LIMIT mode to do what it originally did.
	  Documentation was wrong too and code had a slight bug stopping
	  genlist from contracting to min size.
	* Optimize the case of COMPRESS + homogeneous mode to avoid
	  queue entirely and use existing known item sizes.

2012-05-16  Dave Andreoli

	* Fileselector: Add a wheel spinner that show/spin while EIO is working

2012-05-16  Tom Hacohen (TAsn)

	* Fix fileselector selection done bug and pass the right string.

2012-05-22  Jaehwan Kim

	* Toolbar: Add the more panel feature in toolbar.
	  When it is the ELM_TOOLBAR_SHRINK_EXPAND mode and the max item is set,
	  the items over max number are located in more panel.
	  The APIs are added for this feature.(elm_toolbar_more_item_get, elm_toolbar_items_max_set/get)

2012-05-22 Carsten Haitzler (The Rasterman)

	* Add skeleton for handling remote commands access controls.

2012-05-23  Tae-Hwan Kim (Bluezery)

	* Map: Add elm_map_overlays_get & elm_map_overlay_visible_get functions.

2012-05-24 Michal Pakula vel Rutka

	* Add ability to use cnp helper code on non-elm widget objects by
	  falling back to ecore-evas to get the window id.

2012-05-24 Tae-Hwan Kim (Bluezery)

	* Add "loaded" signal for elm_map.

2012-05-25 Rob Bradford

	* Refactor X11 specific code to use ecore_evas_*_window_get functions
	so that the driver for the Ecore_Evas will be checked.

2012-05-28 Mike Blumenkrantz

	* Fix sizing calc error in list item homogenizing

2012-05-28 Carsten Haitzler (The Rasterman)

	* Made elm_object_focus_set() fall back to evbas_object_focus_set()
	  if the object is not an elm widget.

2012-05-29 Mike Blumenkrantz

        * Prepending items to a genlist no longer causes the selected item to
          scroll out of the viewport
        * Collapsing tree items in genlist now animate properly

2012-05-30 Mike Blumenkrantz

        * Fix even/odd signals for genlist items