@@ -58,3 +58,4 @@ M.V.K. Sumanth <sumanth.m@samsung.com> <mvksumanth@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
 Davide Andreoli (davemds) <dave@gurumeditation.it>
 Michal Pakula vel Rutka <m.pakula@samsung.com>
+Thiep Ha <thiep.ha@samsung.com>
